force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <description>Created for Compliance: Made to function as tasks but with their specific fields.</description>
    <label>Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>