force-app/main/default/objects/Activity__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>Compliance case: longer text area for compliance team members to enter in data for an activity.</description>
    <label>Action Taken</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>