force-app/main/default/objects/Activity__c/fields/Date_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Activity__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date that the activity took place.</description>
    <label>Date of Activity</label>
    <type>Date</type>
</CustomField>