force-app/main/default/objects/Activity__c/fields/Individual_Responsible_For_Activity__c.field-meta.xml
<CustomField>
    <fullName>Individual_Responsible_For_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Similar to &#39;Assigned To&#39; field in other objects</description>
    <label>Individual Responsible for Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Cook County Health Compliance Team, Cook County Health Compliance Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>