force-app/main/default/objects/Activity__c/validationRules/No_future_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>No_future_dates</fullName>
    <active>true</active>
    <description>Activities are meant to be past dates.</description>
    <errorConditionFormula>AND(  Date_of_Activity__c  &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>Date_of_Activity__c</errorDisplayField>
    <errorMessage>Date must be in the past. Please create a &#39;Task&#39; if you wish to set a reminder.</errorMessage>
</ValidationRule>