force-app/main/default/objects/Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date_of_Activity__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>Individual_Responsible_For_Activity__c</columns>
    <columns>Related_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_To__c</field>
        <operation>equals</operation>
        <value>00004001</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <role>Comliance_Team</role>
        <role>Top</role>
    </sharedTo>
</ListView>