force-app/main/default/objects/Activity__c/listViews/My_Activities.listView-meta.xml
<ListView>
    <fullName>My_Activities</fullName>
    <columns>NAME</columns>
    <columns>Individual_Responsible_For_Activity__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_of_Activity__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Activities</label>
    <sharedTo>
        <role>Comliance_Team</role>
        <role>Top</role>
    </sharedTo>
</ListView>